// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should made login with infos correct 1`] = `
Object {
  "message": "Email or password incorrect",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if any payload field is missing (email) 1`] = `
Object {
  "message": "Invalid login",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if tenant id is different of tenant already checked by auth 1`] = `
Object {
  "message": "Invalid tenant",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if user dont exist 1`] = `
Object {
  "message": "Email or password incorrect",
  "status": "ERROR",
  "user": null,
}
`;

exports[`should return error if user password is wrong 1`] = `
Object {
  "message": "Email or password incorrect",
  "status": "ERROR",
  "user": null,
}
`;
